Load tools data and showing it to the UI

--- a/indev.html
+++ b/indev.html
@@ -13,6 +13,14 @@
   </head>
   <body>
     <h2 class="text-5xl font-bold text-center">AI Universe Hub</h2>
+    <main>
+      <section id="tools-card-container">
+        <!-- Tools will add here dynamically -->
+        <div id="toolsCardDiv" class="card bg-base-100 w-96 shadow-sm">
+          <!-- Tools card will add here dynamically -->
+        </div>
+      </section>
+    </main>
 
     <!-- Scripts -->
     <script src="./Scripts/script.js"></script>
