make card container into grid view

--- a/indev.html
+++ b/indev.html
@@ -14,9 +14,7 @@
   <body>
     <h2 class="text-5xl font-bold text-center">AI Universe Hub</h2>
     <main>
-      <section id="tools-card-container">
-        <!-- Tools will add here dynamically -->
-        <div id="toolsCardDiv" class="card bg-base-100 w-96 shadow-sm">
+      <section id="tools-card-container" class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 mt-6">
           <!-- Tools card will add here dynamically -->
         </div>
       </section>
