Loading spinner added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   <body>
     <h2 class="text-5xl font-bold text-center">AI Universe Hub</h2>
     <main>
+      <!-- Spinner -->
+      <section class="text-center mt-10" id="loading-spinner">
+        <span class="loading loading-spinner text-success"></span>
+      </section>
+      <!-- Tools card section -->
       <section id="tools-card-container" class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 mt-6">
           <!-- Tools card will add here dynamically -->
         </div>
