--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
           <!-- Tools card will add here dynamically -->
         </div>
       </section>
+      <!-- Modal -->
+       <!-- You can open the modal using ID.showModal() method -->
+      <dialog id="my_modal_3" class="modal">
+        <div class="modal-box">
+          <form method="dialog"> 
+            <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
+          </form>
+          
+          <div id="show-detail-container" class="grid grid-cols-1 md:grid-cols-2 gap-4">
+            <!-- Information will add dynamically here.. -->
+          </div>
+        </div>
+      </dialog>
     </main>
 
     <!-- Scripts -->
